completed JPA Service layer tests